# plecost-db

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: update-cve-db.yml  update-databases.yml
plecost_db/: __init__.py  cli.py  incremental.py  updater.py
tests/integration/: test_database_updater.py
tests/unit/: test_incremental.py  test_updater.py
